Add rendering pipeline with Zenith.NET and new MainView
Introduced a new rendering pipeline using the Zenith.NET framework
and integrated it into the Avalonia UI application.

- Added `Xaml.Behaviors.Avalonia` and `CommunityToolkit.Mvvm`
  packages for interaction behaviors and MVVM support.
- Replaced `ZenithView` in `MainWindow.axaml` with the new
  `MainView` control.
- Created `MainView` and `MainViewModel` to handle rendering
  logic, including vertex/index buffers, graphics pipeline, and
  resource bindings.
- Added `Vortex.slang` shader for dynamic visual effects based
  on resolution and time.
- Updated `Sample.Avalonia.csproj` to include new dependencies
  and copy shaders to the output directory.

These changes enhance graphical capabilities and modularize
rendering logic in the application.

--- a/sources/Directory.Packages.props
+++ b/sources/Directory.Packages.props
@@ -15,6 +15,7 @@
         <PackageVersion Include="Microsoft.Maui.Essentials" Version="10.0.10" />
         <PackageVersion Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
         <PackageVersion Include="Roslynator.Analyzers" Version="4.14.1" />
+        <PackageVersion Include="Xaml.Behaviors.Avalonia" Version="11.3.8.2" />
         <PackageVersion Include="Zenith.NET.DirectX12" Version="0.0.1" />
         <PackageVersion Include="Zenith.NET.Extensions.Slang" Version="0.0.1" />
         <PackageVersion Include="Zenith.NET.Metal" Version="0.0.1" />
