Migrate from NuGet packages to project references
Removed `NuGet.Config` and replaced all `PackageReference` entries for `Zenith.NET` components with `ProjectReference` entries across the solution. This change enables direct referencing of `Zenith.NET` source projects for local development and debugging.

Updated `Directory.Packages.props` to remove `PackageVersion` entries for `Zenith.NET` packages. Adjusted project files (`Sample.Avalonia.csproj`, `Sample.Maui.csproj`, `Sample.WPF.csproj`, and `Sample.WinForms.csproj`) to reflect the migration.

Re-added `Microsoft.Maui.Controls` and `Microsoft.Maui.Essentials` as `PackageReference` entries in `Sample.Maui.csproj`.

These changes improve integration and allow easier modification of `Zenith.NET` components during development.

--- a/sources/Sample.Avalonia/Sample.Avalonia.csproj
+++ b/sources/Sample.Avalonia/Sample.Avalonia.csproj
@@ -9,6 +9,14 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\..\Zenith.NET\sources\Extensions\Zenith.NET.Extensions.Slang\Zenith.NET.Extensions.Slang.csproj" />
+        <ProjectReference Include="..\..\..\Zenith.NET\sources\Views\Zenith.NET.Views.Avalonia\Zenith.NET.Views.Avalonia.csproj" />
+        <ProjectReference Include="..\..\..\Zenith.NET\sources\Zenith.NET.DirectX12\Zenith.NET.DirectX12.csproj" />
+        <ProjectReference Include="..\..\..\Zenith.NET\sources\Zenith.NET.Metal\Zenith.NET.Metal.csproj" />
+        <ProjectReference Include="..\..\..\Zenith.NET\sources\Zenith.NET.Vulkan\Zenith.NET.Vulkan.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
         <PackageReference Include="Avalonia" />
         <PackageReference Include="Avalonia.Desktop" />
         <PackageReference Include="Avalonia.Diagnostics" />
@@ -16,11 +24,6 @@
         <PackageReference Include="Avalonia.Themes.Fluent" />
         <PackageReference Include="CommunityToolkit.Mvvm" />
         <PackageReference Include="Xaml.Behaviors.Avalonia" />
-        <PackageReference Include="Zenith.NET.DirectX12" />
-        <PackageReference Include="Zenith.NET.Extensions.Slang" />
-        <PackageReference Include="Zenith.NET.Metal" />
-        <PackageReference Include="Zenith.NET.Views.Avalonia" />
-        <PackageReference Include="Zenith.NET.Vulkan" />
     </ItemGroup>
 
     <ItemGroup>
