--- a/sources/Sample.WPF/Sample.WPF.csproj
+++ b/sources/Sample.WPF/Sample.WPF.csproj
@@ -7,12 +7,16 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\..\Zenith.NET\sources\Extensions\Zenith.NET.Extensions.Slang\Zenith.NET.Extensions.Slang.csproj" />
+        <ProjectReference Include="..\..\..\Zenith.NET\sources\Views\Zenith.NET.Views.WPF\Zenith.NET.Views.WPF.csproj" />
+        <ProjectReference Include="..\..\..\Zenith.NET\sources\Zenith.NET.DirectX12\Zenith.NET.DirectX12.csproj" />
+        <ProjectReference Include="..\..\..\Zenith.NET\sources\Zenith.NET.Metal\Zenith.NET.Metal.csproj" />
+        <ProjectReference Include="..\..\..\Zenith.NET\sources\Zenith.NET.Vulkan\Zenith.NET.Vulkan.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
         <PackageReference Include="CommunityToolkit.Mvvm" />
         <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" />
-        <PackageReference Include="Zenith.NET.DirectX12" />
-        <PackageReference Include="Zenith.NET.Extensions.Slang" />
-        <PackageReference Include="Zenith.NET.Views.WPF" />
-        <PackageReference Include="Zenith.NET.Vulkan" />
     </ItemGroup>
 
     <ItemGroup>
