--- a/sources/Sample.Avalonia/Sample.Avalonia.csproj
+++ b/sources/Sample.Avalonia/Sample.Avalonia.csproj
@@ -9,11 +9,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\..\Zenith.NET\sources\Extensions\Zenith.NET.Extensions.Slang\Zenith.NET.Extensions.Slang.csproj" />
         <ProjectReference Include="..\..\..\Zenith.NET\sources\Views\Zenith.NET.Views.Avalonia\Zenith.NET.Views.Avalonia.csproj" />
         <ProjectReference Include="..\..\..\Zenith.NET\sources\Zenith.NET.DirectX12\Zenith.NET.DirectX12.csproj" />
         <ProjectReference Include="..\..\..\Zenith.NET\sources\Zenith.NET.Metal\Zenith.NET.Metal.csproj" />
         <ProjectReference Include="..\..\..\Zenith.NET\sources\Zenith.NET.Vulkan\Zenith.NET.Vulkan.csproj" />
+        <ProjectReference Include="..\Sample\Sample.csproj" />
     </ItemGroup>
 
     <ItemGroup>
@@ -24,12 +24,6 @@
         <PackageReference Include="Avalonia.Themes.Fluent" />
         <PackageReference Include="CommunityToolkit.Mvvm" />
         <PackageReference Include="Xaml.Behaviors.Avalonia" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <None Include="Shaders\**">
-            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
     </ItemGroup>
 
 </Project>
