--- a/sources/Sample.WPF/Sample.WPF.csproj
+++ b/sources/Sample.WPF/Sample.WPF.csproj
@@ -7,22 +7,16 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\..\Zenith.NET\sources\Extensions\Zenith.NET.Extensions.Slang\Zenith.NET.Extensions.Slang.csproj" />
         <ProjectReference Include="..\..\..\Zenith.NET\sources\Views\Zenith.NET.Views.WPF\Zenith.NET.Views.WPF.csproj" />
         <ProjectReference Include="..\..\..\Zenith.NET\sources\Zenith.NET.DirectX12\Zenith.NET.DirectX12.csproj" />
         <ProjectReference Include="..\..\..\Zenith.NET\sources\Zenith.NET.Metal\Zenith.NET.Metal.csproj" />
         <ProjectReference Include="..\..\..\Zenith.NET\sources\Zenith.NET.Vulkan\Zenith.NET.Vulkan.csproj" />
+        <ProjectReference Include="..\Sample\Sample.csproj" />
     </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="CommunityToolkit.Mvvm" />
         <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <None Include="Shaders\**">
-            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
     </ItemGroup>
 
 </Project>
