Add WinUI project and update logging/DPI settings
Introduced a new `Sample.WinUI` project to the solution, leveraging WinUI for Windows application development. Updated the solution file to include the new project and reordered the `Sample` project.

Added necessary package references for WinUI, including `CommunityToolkit.WinUI.Behaviors`, `Microsoft.Windows.SDK.BuildTools`, and `Microsoft.WindowsAppSDK`. Enabled MSIX tooling and added a manifest file to support DPI awareness with `PerMonitorV2`.

Updated `Sample.Avalonia` and `Sample.WPF` projects to use `WinExe` as the `OutputType` and replaced `Console.WriteLine` with `Debug.WriteLine` for logging. Removed the `Zenith.NET.Metal` project reference from `Sample.WPF` and `Sample.WinForms`.

--- a/sources/Directory.Packages.props
+++ b/sources/Directory.Packages.props
@@ -11,8 +11,11 @@
         <PackageVersion Include="Avalonia.Fonts.Inter" Version="11.3.9" />
         <PackageVersion Include="Avalonia.Themes.Fluent" Version="11.3.9" />
         <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+        <PackageVersion Include="CommunityToolkit.WinUI.Behaviors" Version="8.2.250402" />
         <PackageVersion Include="Microsoft.Maui.Controls" Version="10.0.10" />
         <PackageVersion Include="Microsoft.Maui.Essentials" Version="10.0.10" />
+        <PackageVersion Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.7175" />
+        <PackageVersion Include="Microsoft.WindowsAppSDK" Version="1.8.251106002" />
         <PackageVersion Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
         <PackageVersion Include="Roslynator.Analyzers" Version="4.14.1" />
         <PackageVersion Include="Xaml.Behaviors.Avalonia" Version="11.3.8.2" />
