--- a/sources/Sample.WPF/Sample.WPF.csproj
+++ b/sources/Sample.WPF/Sample.WPF.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
+        <OutputType>WinExe</OutputType>
         <TargetFramework>$(StandardTargetFramework)-windows</TargetFramework>
         <UseWPF>true</UseWPF>
     </PropertyGroup>
@@ -9,7 +9,6 @@
     <ItemGroup>
         <ProjectReference Include="..\..\..\Zenith.NET\sources\Views\Zenith.NET.Views.WPF\Zenith.NET.Views.WPF.csproj" />
         <ProjectReference Include="..\..\..\Zenith.NET\sources\Zenith.NET.DirectX12\Zenith.NET.DirectX12.csproj" />
-        <ProjectReference Include="..\..\..\Zenith.NET\sources\Zenith.NET.Metal\Zenith.NET.Metal.csproj" />
         <ProjectReference Include="..\..\..\Zenith.NET\sources\Zenith.NET.Vulkan\Zenith.NET.Vulkan.csproj" />
         <ProjectReference Include="..\Sample\Sample.csproj" />
     </ItemGroup>
