Refactor and enhance Avalonia, WPF, and WinUI apps
Updated namespaces and bindings for consistency across Avalonia, WPF, and WinUI. Introduced MVVM patterns using `CommunityToolkit.Mvvm` for improved maintainability.

Enhanced the WinUI app with Vulkan-based rendering setup and added a new `MainViewModel` implementation. Updated `App.xaml.cs` to initialize a `GraphicsContext` and activate the `MainView`.

Refactored `MainView.axaml` and `MainView.xaml` to align with the new naming conventions. Added new `MainView.xaml` and `MainView.xaml.cs` for WinUI. Updated the project file to enable preview language features and include necessary package references.

--- a/sources/Sample.WinUI/Sample.WinUI.csproj
+++ b/sources/Sample.WinUI/Sample.WinUI.csproj
@@ -6,6 +6,7 @@
         <UseWinUI>true</UseWinUI>
         <ApplicationManifest>app.manifest</ApplicationManifest>
         <EnableMsixTooling>true</EnableMsixTooling>
+        <LangVersion>preview</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
@@ -16,6 +17,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="CommunityToolkit.Mvvm" />
         <PackageReference Include="CommunityToolkit.WinUI.Behaviors" />
         <PackageReference Include="Microsoft.Windows.SDK.BuildTools" />
         <PackageReference Include="Microsoft.WindowsAppSDK" />
