Refactor rendering and replace AppShell with MainView
Refactored `App.xaml.cs` to integrate a platform-specific `GraphicsContext` for Vulkan (Android) and Metal (iOS/macOS) rendering. Replaced `AppShell` and `MainPage` with `MainView` as the primary view, introducing `MainViewModel` for state management and rendering logic using `CommunityToolkit.Mvvm`.

Updated `MauiProgram.cs` to include `ZenithView` and modified `Sample.Maui.csproj` to add new dependencies (`Zenith.NET.Vulkan`, `CommunityToolkit.Mvvm`). Enhanced WinUI `MainView` with updated event handling and dynamic size adjustments.

Performed general cleanup, removing unused files and aligning namespaces.

--- a/sources/Sample.Maui/Sample.Maui.csproj
+++ b/sources/Sample.Maui/Sample.Maui.csproj
@@ -10,10 +10,12 @@
         <ApplicationId>com.zenith.sample.maui</ApplicationId>
         <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
         <ApplicationVersion>1</ApplicationVersion>
+        <LangVersion>preview</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\..\..\Zenith.NET\sources\Views\Zenith.NET.Views.Maui\Zenith.NET.Views.Maui.csproj" />
+        <ProjectReference Include="..\Sample\Sample.csproj" />
     </ItemGroup>
 
     <Choose>
@@ -52,12 +54,14 @@
             </PropertyGroup>
 
             <ItemGroup>
+                <ProjectReference Include="..\..\..\Zenith.NET\sources\Zenith.NET.Vulkan\Zenith.NET.Vulkan.csproj" />
                 <ProjectReference Include="..\..\..\Zenith.NET\sources\Zenith.NET.DirectX12\Zenith.NET.DirectX12.csproj" />
             </ItemGroup>
         </When>
     </Choose>
 
     <ItemGroup>
+        <PackageReference Include="CommunityToolkit.Mvvm" />
         <PackageReference Include="Microsoft.Maui.Controls" />
         <PackageReference Include="Microsoft.Maui.Essentials" />
     </ItemGroup>
