Integrate CommunityToolkit.Maui into the project
Added the `CommunityToolkit.Maui` package to the project and
updated `Directory.Packages.props`, `Sample.Maui.csproj`, and
`MauiProgram.cs` to enable its usage. Modified `MainView.xaml`
to include an `EventToCommandBehavior` for binding the
`RenderRequested` event to the `RenderCommand` in the view model.

--- a/sources/Sample.Maui/Sample.Maui.csproj
+++ b/sources/Sample.Maui/Sample.Maui.csproj
@@ -61,6 +61,7 @@
     </Choose>
 
     <ItemGroup>
+        <PackageReference Include="CommunityToolkit.Maui" />
         <PackageReference Include="CommunityToolkit.Mvvm" />
         <PackageReference Include="Microsoft.Maui.Controls" />
         <PackageReference Include="Microsoft.Maui.Essentials" />
