--- a/sources/Directory.Packages.props
+++ b/sources/Directory.Packages.props
@@ -10,6 +10,7 @@
         <PackageVersion Include="Avalonia.Diagnostics" Version="11.3.9" />
         <PackageVersion Include="Avalonia.Fonts.Inter" Version="11.3.9" />
         <PackageVersion Include="Avalonia.Themes.Fluent" Version="11.3.9" />
+        <PackageVersion Include="CommunityToolkit.Maui" Version="13.0.0" />
         <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.4.0" />
         <PackageVersion Include="CommunityToolkit.WinUI.Behaviors" Version="8.2.250402" />
         <PackageVersion Include="Microsoft.Maui.Controls" Version="10.0.10" />
