--- a/sources/Sample.WinForms/Sample.WinForms.csproj
+++ b/sources/Sample.WinForms/Sample.WinForms.csproj
@@ -10,6 +10,22 @@
         <ProjectReference Include="..\..\..\Zenith.NET\sources\Views\Zenith.NET.Views.WinForms\Zenith.NET.Views.WinForms.csproj" />
         <ProjectReference Include="..\..\..\Zenith.NET\sources\Zenith.NET.DirectX12\Zenith.NET.DirectX12.csproj" />
         <ProjectReference Include="..\..\..\Zenith.NET\sources\Zenith.NET.Vulkan\Zenith.NET.Vulkan.csproj" />
+        <ProjectReference Include="..\Sample\Sample.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <Compile Update="Properties\Resources.Designer.cs">
+            <DesignTime>True</DesignTime>
+            <AutoGen>True</AutoGen>
+            <DependentUpon>Resources.resx</DependentUpon>
+        </Compile>
+    </ItemGroup>
+
+    <ItemGroup>
+        <EmbeddedResource Update="Properties\Resources.resx">
+            <Generator>ResXFileCodeGenerator</Generator>
+            <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+        </EmbeddedResource>
     </ItemGroup>
 
 </Project>
