Add platform-specific file handling to Renderer
Introduced `MauiDirectory` and `MauiFile` utility classes for platform-specific file operations, enabling seamless file handling across Android, iOS, and other platforms. Updated `Renderer.Initialize` to accept delegates for file handling, replacing direct file system calls. Modified shader file operations to use these delegates, ensuring compatibility with platform-specific asset management.

Added null checks in `CreateGraphicsPipeline` for safe shader disposal. Included shader files as Maui assets in the project file, making them accessible under the `Shaders` logical name. These changes improve cross-platform support and maintain modularity.

--- a/sources/Sample.Maui/Sample.Maui.csproj
+++ b/sources/Sample.Maui/Sample.Maui.csproj
@@ -76,4 +76,10 @@
         <MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
     </ItemGroup>
 
+    <ItemGroup>
+        <MauiAsset Include="..\Sample\Shaders\**\*" LogicalName="Shaders\%(RecursiveDir)%(Filename)%(Extension)">
+            <Link>Shaders\%(RecursiveDir)%(Filename)%(Extension)</Link>
+        </MauiAsset>
+    </ItemGroup>
+
 </Project>
