--- a/sources/Sample/Sample.csproj
+++ b/sources/Sample/Sample.csproj
@@ -6,7 +6,9 @@
 
     <ItemGroup>
         <ProjectReference Include="..\..\..\Zenith.NET\sources\Extensions\Zenith.NET.Extensions.Slang\Zenith.NET.Extensions.Slang.csproj" />
-        <ProjectReference Include="..\..\..\Zenith.NET\sources\Zenith.NET\Zenith.NET.csproj" />
+        <ProjectReference Include="..\..\..\Zenith.NET\sources\Zenith.NET.DirectX12\Zenith.NET.DirectX12.csproj" />
+        <ProjectReference Include="..\..\..\Zenith.NET\sources\Zenith.NET.Metal\Zenith.NET.Metal.csproj" />
+        <ProjectReference Include="..\..\..\Zenith.NET\sources\Zenith.NET.Vulkan\Zenith.NET.Vulkan.csproj" />
     </ItemGroup>
 
     <ItemGroup>
