Switch Zenith.NET refs from projects to NuGet packages
Replaced all direct project references to Zenith.NET libraries in sample projects with NuGet package references (version 0.0.1). Updated Directory.Packages.props to include Zenith.NET.* packages. This simplifies dependency management and improves build portability.

--- a/sources/Sample.Avalonia/Sample.Avalonia.csproj
+++ b/sources/Sample.Avalonia/Sample.Avalonia.csproj
@@ -9,7 +9,6 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\..\Zenith.NET\sources\Views\Zenith.NET.Views.Avalonia\Zenith.NET.Views.Avalonia.csproj" />
         <ProjectReference Include="..\Sample\Sample.csproj" />
     </ItemGroup>
 
@@ -21,6 +20,7 @@
         <PackageReference Include="Avalonia.Themes.Fluent" />
         <PackageReference Include="CommunityToolkit.Mvvm" />
         <PackageReference Include="Xaml.Behaviors.Avalonia" />
+        <PackageReference Include="Zenith.NET.Views.Avalonia" />
     </ItemGroup>
 
 </Project>
