--- a/sources/Sample.WinForms/Sample.WinForms.csproj
+++ b/sources/Sample.WinForms/Sample.WinForms.csproj
@@ -7,8 +7,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\..\Zenith.NET\sources\Views\Zenith.NET.Views.WinForms\Zenith.NET.Views.WinForms.csproj" />
         <ProjectReference Include="..\Sample\Sample.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Zenith.NET.Views.WinForms" />
     </ItemGroup>
 
 </Project>
