--- a/sources/Sample.Maui/Sample.Maui.csproj
+++ b/sources/Sample.Maui/Sample.Maui.csproj
@@ -14,7 +14,6 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\..\Zenith.NET\sources\Views\Zenith.NET.Views.Maui\Zenith.NET.Views.Maui.csproj" />
         <ProjectReference Include="..\Sample\Sample.csproj" />
     </ItemGroup>
 
@@ -51,6 +50,7 @@
         <PackageReference Include="CommunityToolkit.Mvvm" />
         <PackageReference Include="Microsoft.Maui.Controls" />
         <PackageReference Include="Microsoft.Maui.Essentials" />
+        <PackageReference Include="Zenith.NET.Views.Maui" />
     </ItemGroup>
 
     <ItemGroup>
