--- a/sources/Sample/Sample.csproj
+++ b/sources/Sample/Sample.csproj
@@ -5,16 +5,16 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\..\Zenith.NET\sources\Extensions\Zenith.NET.Extensions.Slang\Zenith.NET.Extensions.Slang.csproj" />
-        <ProjectReference Include="..\..\..\Zenith.NET\sources\Zenith.NET.DirectX12\Zenith.NET.DirectX12.csproj" />
-        <ProjectReference Include="..\..\..\Zenith.NET\sources\Zenith.NET.Metal\Zenith.NET.Metal.csproj" />
-        <ProjectReference Include="..\..\..\Zenith.NET\sources\Zenith.NET.Vulkan\Zenith.NET.Vulkan.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
         <None Include="Shaders\**">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Zenith.NET.DirectX12" />
+        <PackageReference Include="Zenith.NET.Extensions.Slang" />
+        <PackageReference Include="Zenith.NET.Metal" />
+        <PackageReference Include="Zenith.NET.Vulkan" />
     </ItemGroup>
 
 </Project>
