Refactor Renderer API and event handling in WPF
Simplify Renderer API by constructing constants internally and removing public Constants struct. Update WPF event handling to use Loaded event for attaching RenderRequested handler. Remove Constants.cs, update project references, and adjust usage in Form1 and MainViewModel.

--- a/sources/Sample.WPF/Sample.WPF.csproj
+++ b/sources/Sample.WPF/Sample.WPF.csproj
@@ -7,13 +7,14 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\..\Zenith.NET\sources\Views\Zenith.NET.Views.WPF\Zenith.NET.Views.WPF.csproj" />
         <ProjectReference Include="..\Sample\Sample.csproj" />
     </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="CommunityToolkit.Mvvm" />
         <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" />
-        <PackageReference Include="Zenith.NET.Views.WPF" />
+        <!--<PackageReference Include="Zenith.NET.Views.WPF" />-->
     </ItemGroup>
 
 </Project>
