Switch to ProjectReference for Zenith.NET.Views.WinUI
Replaced NuGet package with direct project reference for Zenith.NET.Views.WinUI in Sample.Uno and Sample.WinUI. Refactored event handling in MainViewModel to subscribe to RenderRequested on view Loaded, improving event management. Updated XAML to trigger LoadedCommand instead of RenderRequested, and adjusted Renderer initialization to use ZenithViewOutputs. These changes streamline local development and prevent duplicate event handlers.

--- a/sources/Sample.Uno/Sample.Uno.csproj
+++ b/sources/Sample.Uno/Sample.Uno.csproj
@@ -8,13 +8,14 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\..\Zenith.NET\sources\Views\Zenith.NET.Views.WinUI\Zenith.NET.Views.WinUI.csproj" />
         <ProjectReference Include="..\Sample\Sample.csproj" />
     </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="CommunityToolkit.Mvvm" />
         <PackageReference Include="CommunityToolkit.WinUI.Behaviors" />
-        <PackageReference Include="Zenith.NET.Views.WinUI" />
+        <!--<PackageReference Include="Zenith.NET.Views.WinUI" />-->
     </ItemGroup>
 
 </Project>
