--- a/sources/Sample.WinUI/Sample.WinUI.csproj
+++ b/sources/Sample.WinUI/Sample.WinUI.csproj
@@ -10,6 +10,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\..\Zenith.NET\sources\Views\Zenith.NET.Views.WinUI\Zenith.NET.Views.WinUI.csproj" />
         <ProjectReference Include="..\Sample\Sample.csproj" />
     </ItemGroup>
 
@@ -18,7 +19,7 @@
         <PackageReference Include="CommunityToolkit.WinUI.Behaviors" />
         <PackageReference Include="Microsoft.Windows.SDK.BuildTools" />
         <PackageReference Include="Microsoft.WindowsAppSDK" />
-        <PackageReference Include="Zenith.NET.Views.WinUI" />
+        <!--<PackageReference Include="Zenith.NET.Views.WinUI" />-->
     </ItemGroup>
 
 </Project>
