Switch to project reference for Zenith.NET.Views.Maui
Replaced the NuGet package reference for Zenith.NET.Views.Maui with a direct project reference to the local Zenith.NET.Views.Maui.csproj. This enables development against the local source code instead of a pre-built package.

--- a/sources/Sample.Maui/Sample.Maui.csproj
+++ b/sources/Sample.Maui/Sample.Maui.csproj
@@ -14,6 +14,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\..\Zenith.NET\sources\Views\Zenith.NET.Views.Maui\Zenith.NET.Views.Maui.csproj" />
         <ProjectReference Include="..\Sample\Sample.csproj" />
     </ItemGroup>
 
@@ -50,7 +51,7 @@
         <PackageReference Include="CommunityToolkit.Mvvm" />
         <PackageReference Include="Microsoft.Maui.Controls" />
         <PackageReference Include="Microsoft.Maui.Essentials" />
-        <PackageReference Include="Zenith.NET.Views.Maui" />
+        <!--<PackageReference Include="Zenith.NET.Views.Maui" />-->
     </ItemGroup>
 
     <ItemGroup>
