Refactor RenderRequested event to use MVVM commands
Replaced direct event handlers with RelayCommand in MainViewModel and updated XAML to use behaviors/triggers for event-to-command binding across Avalonia, WPF, WinUI, Uno, WinForms, and MAUI samples. Added necessary behavior packages, removed code-behind handlers, and improved MVVM compliance and maintainability.

--- a/sources/Directory.Packages.props
+++ b/sources/Directory.Packages.props
@@ -16,7 +16,9 @@
         <PackageVersion Include="Microsoft.Maui.Essentials" Version="10.0.30" />
         <PackageVersion Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.7463" />
         <PackageVersion Include="Microsoft.WindowsAppSDK" Version="1.8.260101001" />
+        <PackageVersion Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
         <PackageVersion Include="Roslynator.Analyzers" Version="4.15.0" />
+        <PackageVersion Include="Xaml.Behaviors.Avalonia" Version="11.3.9.3" />
         <PackageVersion Include="Zenith.NET.DirectX12" Version="0.0.3" />
         <PackageVersion Include="Zenith.NET.Extensions.Slang" Version="0.0.3" />
         <PackageVersion Include="Zenith.NET.Metal" Version="0.0.3" />
