--- a/sources/Sample.Avalonia/Sample.Avalonia.csproj
+++ b/sources/Sample.Avalonia/Sample.Avalonia.csproj
@@ -20,6 +20,7 @@
         <PackageReference Include="Avalonia.Fonts.Inter" />
         <PackageReference Include="Avalonia.Themes.Fluent" />
         <PackageReference Include="CommunityToolkit.Mvvm" />
+        <PackageReference Include="Xaml.Behaviors.Avalonia" />
         <!--<PackageReference Include="Zenith.NET.Views.Avalonia" />-->
     </ItemGroup>
 
