Refactor shader file access for cross-platform support
Replaced MauiAssetService with FileAccessService for platform-aware shader file access. Simplified Renderer initialization and pipeline creation, now using a shared vertex shader ("Fullscreen.slang") for all pipelines. Removed precompiled shader binaries; shaders are now cached/generated at runtime. Updated project to target Android, iOS, and MacCatalyst. Vortex.slang now relies on the shared vertex shader.

--- a/sources/Sample/Sample.csproj
+++ b/sources/Sample/Sample.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>$(StandardTargetFramework)</TargetFramework>
+        <TargetFrameworks>$(StandardTargetFramework);$(StandardTargetFramework)-android;$(StandardTargetFramework)-ios;$(StandardTargetFramework)-maccatalyst</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup>
