Refactor renderer to use Zenith.NET.Views package
Updated all sample apps to use the new Zenith.NET.Views package and a platform-agnostic renderer initialization pattern. Renderer.Initialize no longer requires a ZenithView.Output parameter; output is now managed via ZenithViewHelper.Output. Removed platform-specific Zenith.NET.Views.* usings and added Zenith.NET.Views to project/package references. Refactored Renderer.cs accordingly and made Constants a file-scoped struct. This simplifies and centralizes output management across platforms.

--- a/sources/Sample/Sample.csproj
+++ b/sources/Sample/Sample.csproj
@@ -14,6 +14,7 @@
         <PackageReference Include="Zenith.NET.DirectX12" />
         <PackageReference Include="Zenith.NET.Extensions.Slang" />
         <PackageReference Include="Zenith.NET.Metal" />
+        <PackageReference Include="Zenith.NET.Views" />
         <PackageReference Include="Zenith.NET.Vulkan" />
     </ItemGroup>
 
