--- a/sources/Sample.Maui/Sample.Maui.csproj
+++ b/sources/Sample.Maui/Sample.Maui.csproj
@@ -50,6 +50,7 @@
         <PackageReference Include="CommunityToolkit.Mvvm" />
         <PackageReference Include="Microsoft.Maui.Controls" />
         <PackageReference Include="Microsoft.Maui.Essentials" />
+        <PackageReference Include="SharpMetal" />
         <PackageReference Include="Zenith.NET.Views.Maui" />
     </ItemGroup>
 
